# emurgo-haskell-project

./: CHANGELOG.md  README.md  minesweeper-game.cabal
app/: DataTypes.hs  GameLogic.hs  Main.hs
