cabal-version:      >=1.10
name:               minesweeper-game
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            AllRightsReserved
author:             Ernesto Mangia
maintainer:         ernestomangia.it@gmail.com

-- A copyright notice.
-- copyright:
-- category:
build-type:         Simple
extra-source-files: CHANGELOG.md

executable minesweeper-game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.16 && <4.17
    hs-source-dirs:   app
    default-language: Haskell2010
