cabal-version:      >=1.10
name:               minesweeper-game
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Ernesto Mangia
maintainer:         ernestomangia.it@gmail.com

-- A copyright notice.
-- copyright:
category:           Game
build-type:         Simple
extra-source-files: CHANGELOG.md

executable minesweeper-game
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    DataTypes, GameLogic

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                        , random
                        , mtl
                        , ansi-terminal
    hs-source-dirs:   app
    default-language: Haskell2010
